fixed HTML semantics, Fixed Contrast issue, Added Skip links, Added ARIA roles, Added Schema Infro

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
+
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
@@ -46,6 +47,7 @@ img {
 
 form input,
 form textarea {
+  background-color: lightgray;
   display: block;
   width: 100%;
   margin-bottom: 1rem;
@@ -68,4 +70,26 @@ form button {
 
 .site-footer {
   padding: 2rem 0;
+}
+
+a:focus{
+  outline: 5px solid black;
+}
+
+.skiplinks{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.skiplinks a{
+  position: absolute;
+  top: -3em;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+
+.skiplinks a:focus{
+  top: 0;
 }
